# note-taker-cli

./: Cargo.toml
src/: cli.rs  main.rs
